# Tidal

./: BootTidal.hs  tidal.cabal
src/Sound/Tidal/: Stream.hs  StreamTypes.hs  Tempo.hs
tidal-link/: Setup.hs  tidal-link.cabal
tidal-link/link/include/ableton/discovery/: InterfaceScanner.hpp  PeerGateway.hpp  PeerGateways.hpp
tidal-link/link/include/ableton/link/: Controller.hpp  Gateway.hpp  MeasurementService.hpp  Peers.hpp  PingResponder.hpp  Show.hpp
tidal-listener/: tidal-listener.cabal
tidal-listener/src/Sound/Tidal/: Listener.hs  Tidali.hs
